# package_maker

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
src/package_maker/: templater.py
src/package_maker/resources/: pyproject_toml_template.txt
