[project]
name = "package_maker"
version = "0.0.1"
authors = [
  { name="Pierre-Cng SaywerEdge"},
]
description = "A package template generator"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://github.com/Pierre-Cng/package_maker"